hello world sample component added

--- a/web-comp/index.html
+++ b/web-comp/index.html
@@ -14,11 +14,12 @@
 </head>
 <body>
 
-  <sb-date-picker position="manual" id="testthis" range="true"></sb-date-picker>
+  <wc-date-picker position="manual" id="testthis" range="true"></wc-date-picker>
+  <wc-hello-world></wc-hello-world>
 
-  <script src="core/main.js"></script>
-
-  <script src="date-picker/main.js"></script>
+  <script src="core/main.27dec96f638351ee5da1.js"></script>
+  <script src="date-picker/main.8b41086a1cc86125a5ba.js"></script>
+  <script src="hello-world/main.0efea7370feeb0d49871.js"></script>
   <script>
 
     var datePicker = document.getElementById("testthis");
